# VideoFusion

./: .gitignore  CHANGELOG.md  README.md  VideoFusion.py  cli_interface.py  cmd_interface.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  resource_rc.py  video_fusion.py  video_mosaic.py
.github/workflows/: build.yml  deploy.yml
assets/: about.html  resource.qrc
assets/ui/: concate_page.ui  home_page.ui
docs/: CHANGLOG.md  about.md  advanced_settings.md  contact_me.md  donated.md  function_introduction.md  index.md  normal_settings.md  opencv_only_settings.md  quick-start.md  thanks.md
docs/.vitepress/: config.mts
scripts/: compile_view.py  packaged.py
src/: about.py  config.py  main.py  pipes.py  settings.py  signal_bus.py  utils.py
src/common/: black_remover.py  ffmpeg.py  ffmpeg_command.py  ffmpeg_handler.py  program_coordinator.py  video_handler.py  video_info.py  video_info_reader.py
src/common/black_remove/: img_black_remover.py  video_remover.py
src/common/black_remove_algorithm/: black_remove_algorithm.py  img_black_remover.py  video_remover.py
src/common/processors/: base_processor.py  processor_global_var.py
src/common/processors/audio_processors/: audio_ffmpeg_processor.py  audio_processor_manager.py  noisereduce_processor.py
src/common/processors/exe_processors/: audio_separator_processor.py  auto_editor_processor.py  exe_processor_manager.py
src/common/processors/ffmpeg_processors/: ffmpeg_command_processor.py  generator_ffmpeg_command_processor.py
src/common/task_resumer/: task_resumer.py  task_resumer_manager.py
src/common/utils/: image_utils.py
src/common/video_engines/: base_video_engine.py  ffmpeg_video_engine.py  opencv_video_engine.py
src/components/: cmd_text_edit.py  draggable_list_widget.py  file_drag_and_drop_lineedit.py  file_treeview.py  message_dialog.py  sort_tool_component.py
src/core/: __init__.py  about.py  datacls.py  dicts.py  enums.py  paths.py  version.py
src/interface/: Ui_concate_page.py  Ui_home_page.py
src/model/: concate_model.py  home_model.py  settings_model.py
src/presenter/: concate_presenter.py  home_presenter.py  main_presenter.py  settings_presenter.py
src/view/: concate_view.py  home_view.py  main_view.py  message_base_view.py  settings_view.py
tests/: ffmpeg_handler_test.py  video_info_reader_test.py
tests/test_balck_remove_algorithm/: img_black_remove_algorithm_test.py  video_black_remove_algorithm_test.py
tests/test_processors/test_opencv_processors/: bilateral_denoise_test.py  crop_processor_test.py  resize_processor_test.py  rotate_processor_test.py
tests/utils_test/: image_utils_test.py
(+12 files in other folders)
