[project]
name = "videomosaic"
version = "0.2.3"
description = "视频拼接工具"
authors = [
    { name = "PythonImporter", email = "271374667@qq.com" }
]
dependencies = [
    "pillow>=10.3.0",
    "opencv-python>=4.9.0.80",
    "loguru>=0.7.2",
    "pyside6>=6.7.0",
    "ansi2html>=1.9.1",
    "numpy<=1.23.1",
    "pyside6-fluent-widgets>=1.5.6",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "nuitka>=2.2.3",
    "gooey>=1.0.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/videomosaic"]
