[project]
name = "videomosaic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PythonImporter", email = "271374667@qq.com" }
]
dependencies = [
    "pyside6-fluent-widgets>=1.5.6",
    "ansi2html>=1.9.1",
    "loguru>=0.7.2",
    "numpy>=1.26.4",
    "opencv-contrib-python>=4.10.0.84",
    "typing-extensions>=4.12.2",
    "auto-editor>=24.31.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "nuitka>=2.2.3",
]

[[tool.rye.sources]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/videomosaic"]
